tests/semanticDiff-same-topologies-new1a/diff_output_from_semanticDiff-same-topologies-old1.txt
Connectivity diff:
diff-type: changed, source: demo/cog-agents-account-query[DaemonSet], destination: demo/cog-agents-bank-ui[DaemonSet], dir1:  TCP 8080, dir2: UDP 8080
diff-type: removed, source: demo/cog-agents-bank-ui[DaemonSet], destination: demo/cog-agents-account-command[DaemonSet], dir1:  All Connections, dir2: No Connections
