tests/semanticDiff-same-topologies-new1a/connlist_output.txt
0.0.0.0-255.255.255.255 => demo/cog-agents-account-query[DaemonSet] : All Connections
0.0.0.0-255.255.255.255 => demo/cog-agents-bank-ui[DaemonSet] : All Connections
demo/cog-agents-account-command[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
demo/cog-agents-account-command[DaemonSet] => demo/cog-agents-account-query[DaemonSet] : All Connections
demo/cog-agents-account-command[DaemonSet] => demo/cog-agents-bank-ui[DaemonSet] : All Connections
demo/cog-agents-account-query[DaemonSet] => demo/cog-agents-bank-ui[DaemonSet] : UDP 8080
demo/cog-agents-bank-ui[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
demo/cog-agents-bank-ui[DaemonSet] => demo/cog-agents-account-query[DaemonSet] : All Connections
